# zotero_marker

./: .env.example  .gitignore  CHANGELOG.md  CONTRIBUTING.md  LICENSE  README.md  README_zh.md  pyproject.toml  run.py
.github/workflows/: ci.yml
arxiv_marker/: __init__.py  cli.py  config.py  overrides.py  pipeline.py  proposal.py  rankings.py  report.py  resolvers.py  web.py  zotero_api.py
assets/: README.md
data/: overrides.csv  venue_rankings.csv
plugin/: .gitignore  README.md  bootstrap.js  manifest.json  prefs.js  update.json
plugin/content/: preferences.xhtml  review.xhtml
plugin/content/scripts/: arxiv-marker.js  resolver.js  review.js  zm-data.js
plugin/test/: cases.json  dump_resolution.py  parity.mjs  scope.mjs  unit.mjs
plugin/tools/: build-xpi.ps1  build-xpi.py  gen-data.mjs
tests/: conftest.py  test_cli.py  test_pipeline.py  test_proposal.py  test_rankings.py  test_report.py  test_resolvers.py  test_util.py  test_web.py  test_zotero_api.py
zotero_marker/: __init__.py  cli.py  pipeline.py  proposal.py  rankings.py  report.py  util.py  web.py  zotero_api.py
